--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,7 @@ dependencies {
 	implementation 'net.coobird:thumbnailator:0.4.8'
 	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
 	//implementation 'com.h2database:h2:1.4.200'
+	implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect:3.3.0'
 
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
