--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,8 @@ server.port=8090
 spring.output.ansi.enabled=always
 
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521:orcl
-spring.datasource.username=system
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
+spring.datasource.username=project
 spring.datasource.password=1234
 
 ## MySQL ??
